k8s/hackathon-pi-knative-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hackathon-pi-knative
  labels:
    istio-injection: enabled
